--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -50,7 +50,7 @@ layout: default
         {% elsif page.date %}
         <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{
             site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time
-            datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | default: "" | date: "%B %d, %Y"
+            datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | default: "" | date: ""
             }}</time>
         </p>
         {% endif %}
