ensured there is no duplicated text in coursework.html

--- a/_layouts/coursework.html
+++ b/_layouts/coursework.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+title: "University Coursework"
+permalink: /teaching/university-coursework/
 ---
 
 <div id="main" role="main">
@@ -9,8 +11,6 @@ layout: default
     </header>
 
     <section class="page__content" itemprop="text">
-      <h2>University Coursework</h2>
-      <p>Below I have listed all of the courses I have taken or will be taking throughout my time in university so far, from most recent to oldest.</p>
       {{ content }}
     </section>
   </article>
