--- a/_layouts/coursework.html
+++ b/_layouts/coursework.html
@@ -2,7 +2,19 @@
 layout: default
 ---
 
+{% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
+  {% include page__hero.html %}
+{% endif %}
+
+{% if page.url != "/" and site.breadcrumbs %}
+  {% unless paginator %}
+    {% include breadcrumbs.html %}
+  {% endunless %}
+{% endif %}
+
 <div id="main" role="main">
+  {% include sidebar.html %}
+
   <article class="page" itemscope itemtype="http://schema.org/CreativeWork">
     <header>
       <h1 class="page__title" itemprop="headline">{{ page.title }}</h1>
